man.css
@font-face {
  font-family: 'Inconsolata';
  font-style: normal;
  font-weight: 400;
  src: local('Inconsolata'), url('fonts/Inconsolata.woff') format('woff');
}

body {
  font-family: Inconsolata, monospace;
  background: white;
  color: #3f4c61;
  overflow-x: hidden;
}

h1, h2, h3 {
  font-size: 1em;
  font-weight: normal;
  color: #e43;
  margin-bottom: 0;
}

p {
  margin-left: 3.1em;
  margin-top: 0;
  margin-bottom: 1em;
}

b {
  font-weight: normal;
  color: #e43;
}

i {
  font-style: normal;
  color: #0a0;
}

code {
    font-family: Inconsolata, monospace;
}

dl {
  margin-top: 0;
}

dt {
  margin-left: 3.1em;
}

pre {
  margin-left: 3.1em;
  margin-top: 0;
}

p code:before, p code:after {
                 content: "\"";
                 font-weight: normal;
               }

